# platform

./: .azure-pipelines.sh  .docker.sh  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .merlin  .travis.yml  LICENCE  Makefile  README.md  ast_lifter_403.ml  ast_mapper_class_406.ml  azure-pipelines.yml  build.sh  cudf.mllib  dune  dune-get  jbuild  jbuild.inc  ppx_metaquot_404.ml
algo/: bench.ml  (+2 more)
duniverse/charInfo_width.1.1.0+dune/: Makefile  charInfo_width.opam  dune-workspace.dev
duniverse/charInfo_width.1.1.0+dune/src/: cfg.ml  cfg.mli  charInfo_width.mli  codes.ml  fullwidth.ml
duniverse/cudf.0.9+dune/: .gitignore  ChangeLog  INSTALL  META  Makefile.config  cudf.ml  cudf.mli  cudf.odocl  cudf.opam  cudf_822_lexer.mll  cudf_c.ml  cudf_checker.mli  cudf_parser.mli  cudf_printer.ml  cudf_printer.mli  cudf_type_parser.mly  cudf_types.ml  cudf_types.mli  main_cudf_parse_822.ml  myocamlbuild.ml  test.ml
duniverse/cudf.0.9+dune/c-lib/: Makefile.variants  caml_hash_variant.c  cudf-private.h  cudf.c  cudf.h
duniverse/cudf.0.9+dune/doc/: .gitignore
duniverse/cudf.0.9+dune/examples/: cudf-sort.ml  universe.cudf
duniverse/cudf.0.9+dune/tests/: assert-false.cudf  comment-at-eof.cudf  dup-property.cudf  empty-vpkglist-default.cudf  empty-vpkglist-explicit.cudf  fresher-sol-bad.cudf  indirect-self-conflict.cudf  keep-sol-bad2.cudf  keep-sol-good.cudf  keep-uninst-good.cudf  keep.cudf  legacy-sol.cudf  legacy.pp.cudf  line-111.cudf  missing-stanza-sep-1.cudf  missing-stanza-sep-2.cudf  or-dep.cudf  plus-in-pkgname.cudf  unknown-pkg.sol.cudf  upgrade-singleton-sol-bad.cudf  upgrade-singleton-sol-good.cudf  upgrade-singleton.cudf  virt-upgrade-sol-bad2.cudf  virt-upgrade-sol-good.cudf  virt-upgrade.cudf
duniverse/dose3.5.0.1+dune/: .gitmodules  CHANGES  CREDITS  Copyright  Makefile  README.architecture  README.git  configure.ac  dose3.opam  header.txt  myocamlbuild.ml.pp
duniverse/dose3.5.0.1+dune/algo/: algo.mlpack  depsolver.ml  depsolver.mli  diagnostic.mli  dune  flatten.ml  strongconflicts.ml  strongconflicts_int.ml  strongdeps.ml
duniverse/dose3.5.0.1+dune/applications/: deb-buildcheck.ml  deb-coinstall.ml  dominators-graph.ml  dose-tests.list.in  dose-tests.py
duniverse/dose3.5.0.1+dune/applications/scripts/: apt-cudf-get
duniverse/dose3.5.0.1+dune/common/: .ocamldoc.txt  criteria.ml  criteria_types.ml  cudfAdd.ml  cudfAdd.mli  cudfDiff.ml  cudfDiff.mli  edosSolver.ml  edosSolver.mli  extBenchmark.mli  input.ml  input.mli  minisatSolver.ml  url.ml  util.ml  util.mli
duniverse/dose3.5.0.1+dune/deb/: .ocamldoc.txt  architecture.mli  debian.mlpack  debutil.ml  debutil.mli  edsp.ml  evolution.ml  packages.mli  release.mli  sources.ml
duniverse/dose3.5.0.1+dune/doc/apt-cudf/: README.cudf-solvers
duniverse/dose3.5.0.1+dune/doc/apt-external-solvers.primer/: .gitignore  Makefile  advanced.tex  apt-external-solvers.tex  basic.tex  intro.tex  mancoosi.bib
duniverse/dose3.5.0.1+dune/doc/debcheck.primer/: copyright.tex  data.tex  debcheck-primer.tex  mancoosi.bib  output.tex  reading.tex
duniverse/dose3.5.0.1+dune/doc/debcheck/proposals/: README  test-yaml.py
duniverse/dose3.5.0.1+dune/doc/manpages/: ceve.pod  challenged.pod  deb-buildcheck.pod  debcoinstall.pod  outdated.pod
duniverse/dose3.5.0.1+dune/doc/webpages/: Makefile  README  extract-manpages.py
duniverse/dose3.5.0.1+dune/doc/webpages/src/: faq.mdwn  man.mdwn  quickstart.mdwn
duniverse/dose3.5.0.1+dune/doc/webpages/templates/: bibentry.tmpl  bibfile.tmpl
duniverse/dose3.5.0.1+dune/doseparse/: .ocamldoc.txt  stdDebug.ml  stdLoaders.ml  stdUtils.ml
duniverse/dose3.5.0.1+dune/experimental/: Makefile  aptsolutions.ml  cnftocudf.ml  cudf-diff.ml  cudf-solver.ml  dose-facile.ml  partition.ml  pkglab.ml  pkglab.sh  synthesis-test.ml
duniverse/dose3.5.0.1+dune/experimental/attic/: db-cudf.ml  dotdiff.ml  matrix.ml  migration.ml  outdated-ralf.ml  pref-attach.ml  split-components.ml  strongpred.ml
duniverse/dose3.5.0.1+dune/experimental/dudftocudf/: deb-dudftocudf.ml  dudf-extract.ml  dudfxml.ml  rpm-dudftocudf.ml  xml.ml  xmlParser.ml
duniverse/dose3.5.0.1+dune/experimental/scripts/: join.sh
duniverse/dose3.5.0.1+dune/m4/: ocaml.m4
duniverse/dose3.5.0.1+dune/npm/: .ocamldoc.txt  npm.mlpack
duniverse/dose3.5.0.1+dune/opam/: .ocamldoc.txt  opam.mlpack  packages.ml  packages.mli  tests.ml
duniverse/dose3.5.0.1+dune/opencsw/: csw.mlpack  cswcudf.ml  packages.ml
duniverse/dose3.5.0.1+dune/pef/: .ocamldoc.txt  packages.ml  packages_parser.mly  pefcudf.ml  printer.ml
duniverse/dose3.5.0.1+dune/rpm/: README  librpm4_stubs.c  librpm4_stubs.clib  librpm5_stubs.c  librpm5_stubs.clib  rpmcudf.ml
duniverse/dose3.5.0.1+dune/scripts/: distcheck-aggregate.py  distcheck-plot.py  distcheck-snapshot.sh  pack.ml
duniverse/dose3.5.0.1+dune/versioning/: semverNode.ml  tests.ml  versioning.mlpack
duniverse/dose3/common/: dune  format822.ml
duniverse/extlib.1.7.6+dune/: extlib.opam
duniverse/mccs/: .travis.yml  appveyor.sh  dune-project  mccs.opam
duniverse/mccs.1.1+11/: .gitattributes  .travis-ci.sh  .travis.yml  README.md  appveyor.yml  mccs.opam
duniverse/mccs.1.1+11/src/: abstract_criteria.h  abstract_solver.h  changed_criteria.cpp  changed_criteria.h  combiner.h  constraint_generation.cpp  context_flags.ml  count_criteria.h  criteria.h  cudf.h  cudf_reductions.cpp  cudf_reductions.h  cudf_tools.cpp  dune  glpk_solver.cpp  glpk_solver.h  lexagregate_combiner.cpp  lexagregate_combiner.h  lp_solver.cpp  lp_solver.h  mccs.ml  mccs_stubs.cpp  mccscudf.cpp  mccscudf.h  new_criteria.h  osi_solver.h  removed_criteria.cpp  removed_criteria.h  scoeff_solver.h
duniverse/mccs.1.1+11/src/glpk/: context_flags.ml  dune  dune-shared  glpios01.c  glpios11.c  glpk.h  ocaml_mccs_glpk.ml
duniverse/mccs.1.1+11/test/: dune.inc  gen_tests.ml  test.cl.output  test.clp  test.cudf  very-slow.cudf
duniverse/mccs/src/: dune  mccs_stubs.cpp
duniverse/mccs/src/glpk/: dune-static
duniverse/mccs/test/: dune
duniverse/react.1.2.1+dune/: react.opam
duniverse/react.1.2.1+dune/src/: dune
output/: dune
(+242 files in other folders)
