(alias
 (name cli)
 (deps
   vendor/opam-core/src/client/opamMain.exe
   vendor/opam-core/src/tools/opam_installer.exe
   vendor/bun/src/bun.exe
   vendor/craml/bin/main.exe
   vendor/dune-release/bin/main.exe
   vendor/merlin/src/frontend/ocamlmerlin.exe
   vendor/merlin/src/frontend/ocamlmerlin_server.exe
   vendor/odoc/src/odoc/bin/main.exe
   vendor/utop/src/top/utop.bc
 ))
