(rule (copy ../duniverse/opam-core/src/client/opamMain.exe opam))
(rule (copy ../duniverse/opam-core/src/tools/opam_installer.exe opam-installer))
(rule (copy ../duniverse/mdx/bin/main.exe mdx))
(rule (copy ../duniverse/dune-release/bin/main.exe dune-release))
(rule (copy ../duniverse/merlin/src/frontend/ocamlmerlin.exe ocamlmerlin))
(rule (copy ../duniverse/merlin/src/frontend/ocamlmerlin_server.exe ocamlmerlin-server))
(rule (copy ../duniverse/odoc/src/odoc/bin/main.exe odoc))
(rule (copy ../duniverse/utop/src/top/utop.bc utop))
(rule (copy ../duniverse/ocamlformat/src/ocamlformat.exe ocamlformat))

(alias
 (name cli)
 (deps opam opam-installer mdx dune-release ocamlmerlin ocamlmerlin-server odoc utop ocamlformat))
