(rule (copy ../duniverse/opam-client.2.0.5+dune/src/client/opamMain.exe opam))
(rule (copy ../duniverse/opam-client.2.0.5+dune/src/tools/opam_installer.exe opam-installer))
(rule (copy ../duniverse/mdx.1.5.0/bin/main.exe mdx))
(rule (copy ../duniverse/dune-release.1.3.3/bin/main.exe dune-release))
(rule (copy ../duniverse/merlin.3.3.3/src/frontend/ocamlmerlin/ocamlmerlin.exe ocamlmerlin))
(rule (copy ../duniverse/merlin.3.3.3/src/frontend/ocamlmerlin/ocamlmerlin_server.exe ocamlmerlin-server))
(rule (copy ../duniverse/odoc.1.4.2/src/odoc/bin/main.exe odoc))
(rule (copy ../duniverse/utop.2.4.2/src/top/utop.bc utop))
(rule (copy ../duniverse/ocamlformat.0.12/src/ocamlformat.exe ocamlformat))

(alias
 (name cli)
 (deps opam opam-installer mdx dune-release odoc ocamlformat))
