opam-version: "2.0"
maintainer: "pietro.abate@inria.fr"
authors: [
  "Pietro Abate"
  "Jaap Boender"
  "Roberto Di Cosmo"
  "Johannes Schauer"
  "Ralf Treinen"
  "Stefano Zacchiroli"
  "Jakub Zwolakowski"
  "Olivier Rosello"
]
homepage: "http://www.mancoosi.org/software/"
bug-reports: "https://gforge.inria.fr/tracker/?group_id=4395"
license: "LGPL-v3+ with OCaml linking exception"
dev-repo: "git+https://github.com/dune-universe/dose3.git"
depends: [
  "dune"
  "ocaml"
  "ocamlgraph" {>= "1.8.6"}
  "cudf" {>= "0.7"}
  "conf-perl" {build}
  ("extlib" {>= "1.7.0"} | "extlib-compat" {>= "1.7.0"})
  "re" {>= "1.2.2"}
  "cppo" {build & >= "1.1.2"}
]
conflicts: "dose"
synopsis: "Dose library (part of Mancoosi tools)"
build: [[ "dune" "build" "-p" name ]]
url {
  src: "git://github.com/dune-universe/dose3.git#duniverse-5.0.1"
}
