opam-version: "1.2"
version: "1.1+9"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
authors: [
  "Claude Michel <claude.michel@unice.fr>"
  "Louis Gesbert <louis.gesbert@ocamlpro.com>"
]
homepage: "http://www.i3s.unice.fr/~cpjm/misc/"
bug-reports: "https://github.com/AltGr/ocaml-mccs/issues"
license: "LGPL-2.1 with OCaml linking exception, BSD-3-clause, GPL-3.0"
dev-repo: "https://github.com/AltGr/ocaml-mccs.git"
build: ["dune" "build" "-p" name "-j" jobs]
build-test: [
  ["sh" "-c" "dune build @settests --auto-promote || true"]
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "1.0"}
  "cudf" {>= "0.7"}
]
