opam-version: "2.0"
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
homepage: "http://erratique.ch/software/react"
authors: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
doc: "http://erratique.ch/software/react/doc/React"
dev-repo: "git+https://github.com/dune-universe/react.git"
bug-reports: "https://github.com/dbuenzli/react/issues"
tags: [ "reactive" "declarative" "signal" "event" "frp" "org:erratique" ]
license: "ISC"
depends: [
  "dune"
  "ocaml" {>= "4.01.0"}
]
synopsis: "Declarative events and signals for OCaml"
description: """
Release %%VERSION%%

React is an OCaml module for functional reactive programming (FRP). It
provides support to program with time varying values : declarative
events and signals. React doesn't define any primitive event or
signal, it lets the client chooses the concrete timeline.

React is made of a single, independent, module and distributed under
the ISC license."""
build: [[ "dune" "build" "-p" name ]]
url {
  src: "git://github.com/dune-universe/react.git#duniverse-v1.2.1"
}
