(library
 (name mccs)
 (cxx_names changed_criteria constraint_generation count_criteria
   cudf_reductions cudf_tools glpk_solver lp_solver lexagregate_combiner
   new_criteria notuptodate_criteria removed_criteria mccscudf mccs_stubs)
 (public_name mccs)
 (modules :standard \ context_flags)
 (cxx_flags
  :standard
  -I
  .
  (:include cxxflags.sexp))
 (c_library_flags
  :standard
  (:include clibs.sexp))
 (library_flags
  :standard
  (:include flags.sexp))
 (wrapped false)
 (libraries
  cudf
  (select
   _
   from
   (mccs.glpk.internal -> _)
   (mccs.glpk.shared -> _)
   (mccs.glpk.static -> _)
   (-> _))))

(copy_files# glpk/glpk.h)

(rule
 (targets cxxflags.sexp clibs.sexp flags.sexp)
 (deps context_flags.ml (universe))
 (action
  (run ocaml %{deps})))
